URL Rewriting fix

--- a/css/global.css
+++ b/css/global.css
@@ -55,6 +55,7 @@ body
 		float: left;
 		position: absolute;
 		left: 10px;
+		color: #444
 	}
 	
 		.logo span
@@ -236,6 +237,7 @@ body
 		float: left;
 		position: absolute;
 		left: 10px;
+		color: #444;
 	}
 
 
